IMR 219 header overlap fix [skip-ci]

--- a/ui.frontend/src/main/webpack/components/leforemhe/site/header/scss/header.scss
+++ b/ui.frontend/src/main/webpack/components/leforemhe/site/header/scss/header.scss
@@ -570,6 +570,10 @@ $backgroud-menu-color: #faf5ec;
     a span {
       display: none;
     }
+
+    & + section {
+      margin-top: 12rem;
+    }
   }
   .aem.topV2 header {
     font-size: 1.8rem;
