--- a/ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
+++ b/ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
@@ -545,13 +545,6 @@ header .container-content {
     }
   }
 
-  .top-page-container.container.responsivegrid.partial-background,
-  div.short-searchContainer:has(div.aem.title-container.results)
-    div#rechercheMetier
-    div.background-Yellow {
-    padding-top: 12rem;
-  }
-
   div div.image_component {
     margin: 1rem 0rem !important;
     // width: 42.12rem !important;
